K8S/plateforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plateforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plateformservice
  template:
    metadata:
      labels:
        app: plateformservice
    spec:
      containers:
      - name: plateformservice
        image: 3ala3ajla/plateformservice:latest
---

apiVersion: v1
kind: Service
metadata:
  name: plateformservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: plateformservice
  ports:
  - name: plateformservice
    protocol : TCP
    port: 80
    targetPort: 80
