K8S/plateforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: plateformnpservice-srv
spec:
  type: NodePort
  selector:
    app: plateformservice
  ports:
    - name: plateformservice
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
